--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Copy-aColor.css">
-    <link rel="icon" type="image/x-icon" href="https://static.vecteezy.com/ti/vetor-gratis/p3/15922931-design-de-icone-criativo-de-conta-gotas-vetor.jpg">
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/3045/3045078.png">
     <title>Copy-a Color</title>
 </head>
 
