--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Copy-aColor.css">
-    <link rel="icon" type="image/x-icon" href="https://iili.io/J8x3T79.png">
+    <link rel="icon" type="image/x-icon" href="https://iili.io/J8xIOdJ.png">
     <title>Copy-a Color</title>
 </head>
 
