--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Copy-aColor.css">
-    <link rel="icon" href="https://freeimage.host/i/J8xOBHb">
+    <link rel="icon" href="https://iili.io/J8xOBHb.png">
     <title>Copy-a Color</title>
 </head>
 
